Update.  General layout almost ready.

--- a/iros.bib
+++ b/iros.bib
@@ -17,6 +17,32 @@ abstract="Validation is a key concept in the development and assessment of medic
 isbn="978-3-319-46723-8"
 }
 
+@article{Albert.etal2012,
+abstract = {Despite ongoing improvements in the acute treatment of cerebrovascular diseases and organization of stroke services, many stroke survivors are in need of neurorehabilitation, as more than two-thirds show persisting neurologic deficits. While early elements of neurorehabilitation are already taking place on the stroke unit, after the acute treatment, the patient with relevant neurologic deficits usually takes part in an organized inpatient multidisciplinary rehabilitation program and eventually continues with therapies in an ambulatory setting afterwards. A specialized multidisciplinary neurorehabilitation team with structured organization and processes provides a multimodal, intense treatment program for stroke patients which is adapted in detail to the individual goals of rehabilitation. There are many parallels between postlesional neuroplasticity (relearning) and learning in the development of individuals as well as task learning of healthy persons. One key principle of neurorehabilitation is the repetitive creation of specific learning situations to promote mechanisms of neural plasticity in stroke recovery. There is evidence of achieving a better outcome of neurorehabilitation with early initiation of treatment, high intensity, with specific goals and active therapies, and the coordinated work and multimodality of a specialized team. In this context, interdisciplinary goal-setting and regular assessments of the patient are important. Furthermore, several further potential enhancers of neural plasticity, e.g., peripheral and brain stimulation techniques, pharmacological augmentation, and use of robotics, are under evaluation.},
+author = {Albert, Sylvan J and Kesselring, J{\"{u}}rg},
+doi = {10.1007/s00415-011-6247-y},
+issn = {1432-1459},
+journal = {Journal of Neurology},
+number = {5},
+pages = {817--832},
+title = {{Neurorehabilitation of stroke}},
+url = {https://doi.org/10.1007/s00415-011-6247-y},
+volume = {259},
+year = {2012}
+}
+
+
+@article{Roerdink.etal2007,
+  title={Gait coordination after stroke: benefits of acoustically paced treadmill walking},
+  author={Roerdink, Melvyn and Lamoth, Claudine JC and Kwakkel, Gert and Van Wieringen, Piet CW and Beek, Peter J},
+  journal={Physical therapy},
+  volume={87},
+  number={8},
+  pages={1009--1022},
+  year={2007},
+  publisher={Oxford University Press}
+}
+
 
 @manual{htsantalucia.2022,
 title  = "Hospital Santa Lucia - Technology Rehabilitation",
@@ -388,7 +414,7 @@ title = {{Vibrotactile-based rehabilitation on balance and gait in patients with
 volume = {11},
 year = {2021}
 }
-@article{Brandebusemeyer2021,
+@article{Brandebusemeyer.etal2021,
 abstract = {Spatial orientation and navigation depend primarily on vision. Blind people lack this critical source of information. To facilitate wayfinding and to increase the feeling of safety for these people, the “feelSpace belt” was developed. The belt signals magnetic north as a fixed reference frame via vibrotactile stimulation. This study investigates the effect of the belt on typical orientation and navigation tasks and evaluates the emotional impact. Eleven blind subjects wore the belt daily for seven weeks. Before, during and after the study period, they filled in questionnaires to document their experiences. A small sub-group of the subjects took part in behavioural experiments before and after four weeks of training, i.e., a straight-line walking task to evaluate the belt's effect on keeping a straight heading, an angular rotation task to examine effects on egocentric orientation, and a triangle completion navigation task to test the ability to take shortcuts. The belt reduced subjective discomfort and increased confidence during navigation. Additionally, the participants felt safer wearing the belt in various outdoor situations. Furthermore, the behavioural tasks point towards an intuitive comprehension of the belt. Altogether, the blind participants benefited from the vibrotactile belt as an assistive technology in challenging everyday situations.},
 author = {Brandebusemeyer, Charlotte and Luther, Anna Ricarda and K{\"{o}}nig, Sabine U. and K{\"{o}}nig, Peter and K{\"{a}}rcher, Silke M.},
 doi = {10.3390/s21217384},
@@ -452,4 +478,25 @@ title = {{Reinforcement learning for adaptive threshold control of restorative b
 url = {http://journal.frontiersin.org/Article/10.3389/fnins.2015.00036/abstract},
 volume = {9},
 year = {2015}
+}
+
+@article{Porras.etal2017,
+  title={Hemorrhage risk of brain arteriovenous malformations during pregnancy and puerperium in a North American cohort},
+  author={Porras, Jose L and Yang, Wuyang and Philadelphia, Eunice and Law, Jody and Garzon-Muvdi, Tomas and Caplan, Justin M and Colby, Geoffrey P and Coon, Alexander L and Tamargo, Rafael J and Huang, Judy},
+  journal={Stroke},
+  volume={48},
+  number={6},
+  pages={1507--1513},
+  year={2017},
+  publisher={Am Heart Assoc}
+}
+
+@article{Peake.etal2018,
+  title={A critical review of consumer wearables, mobile applications, and equipment for providing biofeedback, monitoring stress, and sleep in physically active populations},
+  author={Peake, Jonathan M and Kerr, Graham and Sullivan, John P},
+  journal={Frontiers in physiology},
+  volume={9},
+  pages={743},
+  year={2018},
+  publisher={Frontiers Media SA}
 }
