Intro and the general layout ready.

--- a/iros.bib
+++ b/iros.bib
@@ -1,3 +1,95 @@
+@article{Zhao.etal2022,
+title = {Gait rehabilitation training robot: A motion-intention recognition approach with safety and convenience},
+journal = {Robotics and Autonomous Systems},
+pages = {104260},
+year = {2022},
+issn = {0921-8890},
+doi = {https://doi.org/10.1016/j.robot.2022.104260},
+url = {https://www.sciencedirect.com/science/article/pii/S092188902200152X},
+author = {A. Donghui Zhao and B. Tianqi Zhang and C. Houde Liu and D. Junyou Yang and E. Hiroshi Yokoi},
+keywords = {Directional Intention Recognition (DIR), Gait rehabilitation training robot, Safety and accuracy, Speed Intention Recognition (SIR)},
+abstract = {Motion-intention recognition is a vital prerequisite in active training when employing a gait rehabilitation training robot. To accurately recognize the motion intention of the elderly and the people with inconveniences in the human–robot interaction process, a novel approach of motion intention recognition with safety, accuracy, and convenience, including directional intention recognition (DIR) and speed intention recognition (SIR) is proposed in this paper. Firstly, the structures of the gait rehabilitation training robot and its motion-intention recognition system are illustrated. To ensure that the user walks in any desired direction safely and naturally, an improved distance-type fuzzy reasoning algorithm combined with a shake-intent filter and second-order optimization algorithm is proposed. It effectively eliminates the control error caused by body shaking and usage habits in human–robot interaction. Furthermore, by extracting from the pressure sensor data, a novel algorithm, taking advantage of the Gaussian probability density function (PDF)’s characteristics, is proposed for SIR, which does not increase the system complexity. Finally, a multi-directional fuzzy reasoning experiment and a human–robot interaction experiment are implemented. The results show that the algorithm can accurately recognize the motion direction intention and motion speed intention of people with weak motion capability, which also improves the safety and convenience of the interaction approach. The proposed method can be integrated into a walker with similar structures, and the whole system can be applied in hospitals, families, and other places for assisting the elderly and the disabled.}
+}
+
+@article{Tong.etal2006,
+  title={Effectiveness of gait training using an electromechanical gait trainer, with and without functional electric stimulation, in subacute stroke: a randomized controlled trial},
+  author={Tong, Raymond K and Ng, Maple F and Li, Leonard S},
+  journal={Archives of physical medicine and rehabilitation},
+  volume={87},
+  number={10},
+  pages={1298--1304},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@inproceedings{Peshkin.etal2005,
+  title={KineAssist: A robotic overground gait and balance training device},
+  author={Peshkin, Michael and Brown, David A and Santos-Munn{\'e}, Julio J and Makhlin, Alex and Lewis, Ela and Colgate, J Edward and Patton, James and Schwandt, Doug},
+  booktitle={9th International Conference on Rehabilitation Robotics, 2005. ICORR 2005.},
+  pages={241--246},
+  year={2005},
+  organization={IEEE}
+}
+
+
+@incollection{Caplan.etal2023,
+title = {Chapter 27 - Cerebrovascular disease—stroke},
+editor = {Michael J. Zigmond and Clayton A. Wiley and Marie-Francoise Chesselet},
+booktitle = {Neurobiology of Brain Disorders (Second Edition)},
+publisher = {Academic Press},
+edition = {Second Edition},
+pages = {457-476},
+year = {2023},
+isbn = {978-0-323-85654-6},
+doi = {https://doi.org/10.1016/B978-0-323-85654-6.00044-7},
+url = {https://www.sciencedirect.com/science/article/pii/B9780323856546000447},
+author = {Louis R. Caplan and Roger P. Simon and Sara Hassani},
+keywords = {Amyloid angiopathy, Aneurysm, Apoptosis, Arteriosclerosis, Arteriovenous malformations, Caspase, Cavernous angiomas, Charcot–Bouchard, Dissection, Emboli, Excitotoxicity, Fibromuscular dysplasia, Hematoma, Hemorrhage, Ischemia, Lacune, Moyamoya, Necrosis, No reflow, Penumbra, Thrombosis, Vasculitis},
+}
+
+
+@article{Afrasiabifar.etal2020,
+author = {Ardashir Afrasiabifar and Zahra Mehri and Hamid Reza Ghaffarian Shirazi},
+title ={Orem’s Self-Care Model with Multiple Sclerosis Patients’ Balance and Motor Function},
+journal = {Nursing Science Quarterly},
+volume = {33},
+number = {1},
+pages = {46-54},
+year = {2020},
+doi = {10.1177/0894318419881792},
+    note ={PMID: 31795883},
+URL = { 
+        https://doi.org/10.1177/0894318419881792},
+eprint = { 
+        https://doi.org/10.1177/0894318419881792},
+}
+
+
+@article{Blicher.etal2009,
+  title={Cortical and spinal excitability changes after robotic gait training in healthy participants},
+  author={Blicher, Jakob U and Nielsen, J{\o}rgen F},
+  journal={Neurorehabilitation and neural repair},
+  volume={23},
+  number={2},
+  pages={143--149},
+  year={2009},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@incollection{Donato.etal2016,
+title = {Chapter 19 - Overview of Balance Impairments: Functional Implications},
+editor = {Glen Gillen},
+booktitle = {Stroke Rehabilitation (Fourth Edition)},
+publisher = {Mosby},
+edition = {Fourth Edition},
+pages = {394-415},
+year = {2016},
+isbn = {978-0-323-17281-3},
+doi = {https://doi.org/10.1016/B978-0-323-17281-3.00019-8},
+url = {https://www.sciencedirect.com/science/article/pii/B9780323172813000198},
+author = {Susan M. Donato and Karen Halliday Pulaski and Glen Gillen}
+}
+
 @InProceedings{Papastylianou.etal2016,
 author="Papastylianou, Tasos
 and Dall' Armellina, Erica
@@ -399,7 +491,7 @@ url = {http://journals.sagepub.com/doi/10.1177/1545968306290224},
 volume = {20},
 year = {2006}
 }
-@article{DeAngelis2021,
+@article{DeAngelis.etal2021,
 abstract = {Postural instability and fear of falling represent two major causes of decreased mobility and quality of life in cerebrovascular and neurologic diseases. In recent years, rehabilitation strategies were carried out considering a combined sensorimotor intervention and an active involvement of the patients during the rehabilitation sessions. Accordingly, new technological devices and paradigms have been developed to increase the effectiveness of rehabilitation by integrating multisensory information and augmented feedback promoting the involvement of the cognitive paradigm in neurorehabilitation. In this context, the vibrotactile feedback (VF) could represent a peripheral therapeutic input, in order to provide spatial proprioceptive information to guide the patient during task-oriented exercises. The present systematic review and metanalysis aimed to explore the effectiveness of the VF on balance and gait rehabilitation in patients with neurological and cerebrovascular diseases. A total of 18 studies met the inclusion criteria and were included. Due to the lack of high-quality studies and heterogeneity of treatments protocols, clinical practice recommendations on the efficacy of VF cannot be made. Results show that VF-based intervention could be a safe complementary sensory-motor approach for balance and gait rehabilitation in patients with neurological and cerebrovascular diseases. More high-quality randomized controlled trials are needed.},
 author = {{De Angelis}, Sara and Princi, Alessandro Antonio and {Dal Farra}, Fulvio and Morone, Giovanni and Caltagirone, Carlo and Tramontano, Marco},
 doi = {10.3390/brainsci11040518},
