--- a/iros.tex
+++ b/iros.tex
@@ -11,7 +11,7 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Equilivest: A Robotic Vest to aid in Post-Stroke Human Balance Rehabilitation
+\title{Equilivest: A Robotic Vest to aid in Post-Stroke Dynamic Human Balance Rehabilitation
 \thanks{Identify applicable funding agency here. If none, delete this.}
 }
 
@@ -52,59 +52,156 @@ Buenos Aires, Argentina \\
 fpaviotti@itba.edu.ar}
 }
 
+
+
 \maketitle
 
 \begin{abstract}
-Stroke is a devastanting disease that affects bla bla bla.
-It has been shown that neurofeedback can help patients to regain lost motor activity and recover functionality.
-In this work, we are proposing a device that help patients by augmentation sensory sensation and pinning information to certain patterns in gait.  We are presenting results from surveys to patient's caregivers, patients and medical personal.  We are presenting the experimentation paradigm, and the robotic device that we created to help the patient.
+This document is a model and instructions for \LaTeX.
+This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, 
+or Math in Paper Title or Abstract.
 \end{abstract}
 
 \begin{IEEEkeywords}
-component, formatting, style, styling, insert
+Stroke, Balance, Rehabilitation, Biofeedback, Vibrotactile
 \end{IEEEkeywords}
 
 \section{Introduction}
 
-Brain stroke is a devastating disease.  It affects worldwide population and is the main cause of disabilities worldwide.  Disabilities related to stroke can affect motor pathways, and may lead to several motor disability disorders.  Hence, as early as possible the rehabilitation can be put into place, better the outcome that can be obtained by the treatment.   
+Brain stroke is a devastating disease, that affects world population and is the main cause of disabilities worldwide~\cite{Caplan.etal2023}.  Disabilities related to stroke can affect motor pathways, and may lead to several motor function disorders.   One important aspect of motor function is balance which is the ability to control the center of mass of the body inside the base support provided by the lower limb.  Stroke can affect dynamic balance as well,  which is manifested while walking and that affect autonomy, independence and is an important factor in activities of daily living (ADL) particularly for young patients~\cite{Afrasiabifar.etal2020,Donato.etal2016}.
 
-Strong evidence suggests that neuroplasticity can be enhanced by neural rehabilitation~\cite{Albert.etal2012}.  These procedures are aimed to relearn movements that can trigger new pathway generation which reroute, or even completely replace, those pathways that were damaged by the stroke.  Neurorehabilitation procedures are performed by a group of interdisciplinary care givers and technicians.  Recently, biofeedback techniques, aiming at providing extra information to the patient that can be used to aid in the relearning has appear as an alternative treatment to increase neuralplasticitly, in the form of Wearable devices-based biofeedback rehabilitation (WDBR) home rehabilitation, or even daily use\cite{Peake.etal2018}.  Authors found evidence that biofeedback can indeed help rehabilitation procedures.
+% As early as possible the rehabilitation can be put into place, better the outcome that can be obtained by the treatment. 
 
-This work relies on the following idea:  the addition of an independent and new signal, that can be assimilated as an extrasensory input, could  provides extra information which could improve dynamic balance performance on stroke patients which may have yet insufficiency to deal properly with walking.  The idea is that we have now the ability to provide meaningful balance information with hardware and software that can provide this extra signal in the form of any form of stimulation, for instance vibrotactile.
+Strong evidence suggests that neuroplasticity can be enhanced by neural rehabilitation~\cite{DeAngelis.etal2021,Albert.etal2012}.  These procedures are aimed to relearn movements that can trigger new pathway generation which reroute, or even completely replace, those pathways that were damaged by the stroke.  Neurorehabilitation procedures are performed by a group of interdisciplinary caregivers and technicians.  Recently, biofeedback techniques, aiming at providing extra information to the patient that can be used to aid in the relearning have appeared as an alternative treatment to increase neuralplasticitly. These are in the form of Wearable devices-based biofeedback rehabilitation (WDBR)~\cite{Peake.etal2018} or more advanced robotic rehabilitation gait devices~\cite{Zhao.etal2022,Peshkin.etal2005,Tong.etal2006}.  
 
-We are presenting here the development of a device which is grounded on this idea, and is aiming to help a post-stroke patient with a dynamic balance problem as a case study.  This is implemented with a smart-vest~\cite{Brandebusemeyer.etal2021}, which we will call, equilivest, that can detect some particular situation and implement in a way to fix one particular problem.  We aim to provide motor learning, which means that you need to provide a fading vibrotactile feedback, and that the signal needs to be provided in a way which is less conscious as possible.  The device is based on the idea to promote plasticity by giving her vibrotactile stimulation based on kinematic and dynamics measurements.  The idea is to exploits these ideas from neurofeedback that we can create "external" sensors by providing some form of vibrotactile stimulation on her belly and link that stimulation to some form of measurements from IMUs (inertial sensors).
+%This published evidence emphasizes that this biofeedback can indeed enhance the results of rehabilitation procedures.
 
-The form of validation procedures that is required in clinical settings\cite{Papastylianou.etal2016}.
+The working hypothesis is as follows:  the addition of an independent and new peripheral therapeutic signal, that can be assimilated as an extrasensory input,  could improve dynamic balance performance on stroke patients which may have yet insufficiency to deal properly with the complexities of walking.  The idea is that we have now the ability to provide meaningful balance information with hardware and software that can provide this extra signal in the form of any form of stimulation, particularly vibrotactile feedback (VF).  Although the effectiveness of biofeedback on static balance has been tackled extensively in the literature, works dealing with dynamic balancing problems have been negligible.
 
-Section presents the case study.  Next section presents the underlying clinical hypothesis that this work is trying to promote.  Finally section this and that present the experimental design.  Results are presented on the next section, and this work concludes with discussion and conclussion.
+This work presents the development of a device which is grounded on this idea, and aims to help a post-stroke patient with a remaining dynamic balance problem, and present it as a case study.  The proposed development is implemented as a smart-vest~\cite{Brandebusemeyer.etal2021}, which we will call, equilivest, that address three possible clinical hypothesis of the underlying problem.  We aim to provide motor learning, meaning to provide a fading vibrotactile feedback signal which is as less conscious as possible~\cite{Donato.etal2016}.  The device aims to promote plasticity by providing timing vibrotactile stimulation based on kinematic and dynamics measurements.  
+
+%The idea is to exploits these ideas from neurofeedback that we can create "external" sensors by providing some form of vibrotactile stimulation on her belly and link that stimulation to some form of measurements from IMUs (inertial sensors).
+
+%The form of validation procedures that is required in clinical settings\cite{Papastylianou.etal2016}.
+
+Section presents the case study.  Next section summarize the results of the interviews and surveys performed by the patient, their family and professional caregivers.  Based on the analyze of the data, the next section presents the underlying clinical hypothesis. Section A describes the vest details and architecture.  The experimental design protocol is expounded in Section B.  Preliminary results are presented on the next section, and this work concludes with discussion and conclusion.
 
 \section{Materials and Methods}
 
 \subsection{Single Patient Case Study}
 
-Patient is a 31 years old female, perfectly healthy, who suffered an acute brainstem stroke after giving birth  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which was somehow facilitated by pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in coma for around 2 months, after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, Patient managed to recover significantly, including from dysphagia, which were very important in order to remove the feeding tube allowing her to start speech recovering.  
+Patient is a 31 years old female, perfectly healthy, who suffered an acute brainstem stroke after giving birth  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which was likely affected by pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in coma for around 2 months, and after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, Patient managed to recover significantly, including from dysphagia, which were very important in order to remove the feeding tube allowing her to start speech recovering.  
 
-After 24 months since event, the patient, was discharged from hospital and only maintained a 3 times per week rehabilitation treatment, focusing on a remaining affection related with dynamic walking balance problems.  Patient achieved higher index scores in static balance tests and is fully able to hip-balance and ankle-balance.  Patient has recovered muscle in her legs and can perform lower-limb workouts without problems.  Her vision is normal.  Somatosensorial system is optimal on foot sole.  Tests performed to verify proprioceptive system were successfully passed.
+After 24 months since event, the patient, was discharged from hospital and only maintained a 3 times per week rehabilitation treatment, focusing on a remaining affection related with dynamic walking balance problems.  The patient achieved satisfactory index scores in static balance tests and is fully able to perform hip-balance and ankle-balance.  She has recovered muscle in her legs and can perform lower-limb exercises.  Her vision is normal.   Tests performed to verify proprioceptive system were successfully passed.
 
-However, when Patient tries to walk on open-spaces, or with confronting lights (like walking towards sunlight) or with other people moving around, she is unable to keep up with the pace of the gait and falls frequently.  This is consistent, under these three situations.  Nowadays, the patient can walk with a Canadian cane or a non-actuated walking helper which she is hesitant to use, both.
+However, when the patient tries to walk on open-spaces, or with confronting lights (like walking towards sunlight), with other people moving around, or when walking concentration fades, she is unable to keep up with the pace of the gait and falls frequently.  This is consistent, under these situations.  Nowadays, the patient can walk with a Canadian cane or a non-actuated walking helper which she is hesitant to use, both.
+
+\begin{table*}[t]
+\begin{center}
+\begin{tabular}[!t]{|c|c|}
+\hline
+Question & Avg. answer \\
+\hline
+Podes describir cómo y cuándo se expresa la perdida del equilibrio y su proceso? - Esta pregunta nos servirá para determinar con mayor precisión los métodos de sensado y alarma a desarrollar  & Cuando estoy cansada, distraída o muy nerviosa\\
+\hline
+¿Siempre se desarrolla de la misma manera? - Con esta pregunta queremos profundizar sobre la anterior con el objetivo de una mejor comprensión &  Si \\
+\hline
+¿Cuál? Si la respuesta fue no, deje sin contestar  & Me desequilibro\\
+\hline
+¿Podés evidenciar cuando estas por empezar a perder el equilibrio? - Con esta pregunta intentamos conocer un fenómeno que permita detectar el principio de caída & Si \\
+\hline
+Si la respuesta fue si ¿Qué sentís? & Un poco no siempre siento inestabilidad previo  \\
+\hline
+¿Con qué frecuencia usas el andador? - Puede seleccionar mas de una opción. Así nos ayudará a entender mejor el cuadro & Solo fuera de casa \\
+\hline
+¿Existe algún denominador común en las caídas? - La presencia de este sería importantísima para  un fenómeno o señal a medir y caracterizar que sería muy útil para la detección del principio de caídas. Si hay algo que siempre se repite podríamos enfocarnos en detectar eso. & Si \\
+\hline\\
+¿Cuál? Si la respuesta fue "No" deje la respuesta en blanco & Lo que anteriormente dije estoy cansada o distraída o nerviosa  \\
+\hline
+¿Cómo estás trabajando la recuperación hoy por hoy? - Con esta pregunta buscamos conocer el estado de situación y trabajo actual & Fortalecimiento de músculos   \\
+\hline
+¿Hay algo más que desees comentar o expresar? & No uso andador es un bastón canadiense. 
+Ahora me doy cuenta antes que me voy a caer, pero queda poco para evitarlo.   \\
+\hline
+\end{tabular}
+\caption{table}{Answers to survey questions.}
+\label{tab:alpi_q_table_1}
+\end{center}
+\end{table*}
+
+
+
+\begin{table*}[t]
+\begin{center}
+\begin{tabular}[!t]{|c|c|}
+\hline
+Question & Avg. answer \\
+\hline
+¿Cuál es la razón de la pérdida del equilibrio en la paciente? - Esta pregunta nos permite conocer la opinión de los profesionales e interiorizarnos en el caso.  & Lesión en el tronco del encéfalo\\
+\hline
+¿Podes describir cómo y cuándo se expresa la perdida del equilibrio y su proceso? - Con la descripción podemos comprender como y en que circunstancias se desencadena el fenómeno de la caída y conocer mejor el caso. &  La pérdida del equilibrio se expresa en el inicio y durante la marcha. cuando se detiene también. Camina con compensación visual y cuando quita la vista el suelo (ej mira para el costado aumenta la inestabilidad) Realiza una marcha sin el automatismo habitual. Le demanda mucha concentracion.  \\
+\hline
+¿ La paciente puede caminar sin un dispositivo de tipo ayuda marcha? De ser así, ¿Bajo que circunstancias? - Conociendo mejor la situación actual podemos tomar mejores decisiones en cuanto a como posicionar sensores y medir.  & Solo de manera  terapéutica. habitualmente la trabajamos con máxima supervisión.\\
+\hline
+¿Presenta una pérdida de fuerza muscular que dificulte el caminar? - Esta pregunta permite conocer el caso en mayor detalle  con propiedad para evitar adelantarnos a hipótesis de trabajo erróneas. & No \\
+\hline
+¿Presenta dismetría? - Nuevamente queremos adelantarnos a hipótesis erróneas a la hora de decidir el método de sensado y procesamiento de las señales. La longitud o duración de los movimientos puede usarse como un indicador para nosotros, como también asi los ritmos. & Si \\
+\hline
+¿Presenta temblores?  - En caso de presentar temblores estos se verán reflejados en las señales y es útil tenerlo en cuenta ya que caracterizará a nuestra señal. & No \\
+\hline
+¿Presenta alteraciones en la marcha en instantes previos a la caída? - En caso de existir algún impulso inicial que podamos sensar o medir de forma indirecta podemos anticiparnos a la perdida del equilibrio en las señales. & Si \\
+\hline\\
+¿Cuáles? Si la respuesta fue "No" deje en blanco & Fallas las reacciones de tobillo y cadera \\
+\hline
+¿Sufrió alteraciones en la sensibilidad profunda? - Existe un trabajo previo en la Universidad de Buenos Aires que usa un método de sensado orientado a la presión de la pisada. Esto puede orientarnos en otro sentido en el sensado y estimulación. & No  \\
+\hline
+Antes de perder el equilibrio, ¿Trastabilla?¿Acelera la marcha? -  Al igual que en otras preguntas buscamos obtener información extra para el  procesamiento de las señales y detección del principio de caída. Estos fenómenos pueden medirse o detectarse y evidenciarían el inicio de una posible caída. & Otro síntoma  \\
+\hline
+Si la respuesta fue 'Otro síntoma' ¿Cuál? - En caso contrario deje sin responder & Reacción lenta \\
+\hline
+¿Presenta algún tipo de marcha patológica? -la caracterización del caso permite decidir formas y métodos de sensado y procesamiento. & Si  \\
+\hline
+¿Cuál? Si la respuesta fue "No" deje la respuesta en blanco & Marcha Atáxica \\
+\hline
+¿Existe algún denominador común en las caídas? - La presencia de este sería importantisima para  un fenómeno o señal a medir y caracterizar que sería muy útil para la detección del principio de caídas. Si hay algo que siempre se repite podríamos enfocarnos en detectar eso. & Si \\
+\hline
+¿Cuál? Si la respuesta fue "No" deje la respuesta en blanco & El denominador es cuando deja de realizar la marcha de manera consciente. Por ejemplo, cuando camina y tiene que realizar alguna tarea que implique procesos cognitivo. Dual Task  \\
+\hline
+¿Se hizo un estudio de evaluación de marcha? - Esta pregunta podría aportar información suplementaria a preguntas anteriores que nos permiten conocer e interiorizarnos en el caso & No  \\
+\hline
+¿Se hizo evaluación de riesgo de caídas? - Esta pregunta puede aportar algo de información extra para el conocimiento del caso. & Si  \\
+\hline
+¿Hay alguna manera en que trabaje en la reeducación de la paciente? -  Quisiéramos conocer un poco mas la situación actual y las actividades que realiza la paciente para su recuperación. & Si a través de la reeducación del VOR,  facilitación del equilibrio estático y dinámico, entrenamiento del automatismo de la marcha con diferentes niveles de dificultad.  \\
+\hline
+¿Hay algo mas que desee comentar o expresar?  & Mes a mes se evidencia una mejora, todavía no alcanza para que pueda caminar sin supervisión.  \\
+\hline
+\end{tabular}
+\caption{table}{Answers to survey questions.}
+\label{tab:alpi_q_table_1}
+\end{center}
+\end{table*}
+
+Based on the surveys and the information provided by caregivers there seems not to be any somatosensorial deficit~\cite{Donato.etal2016}. 
+There isn't any report of somatosensorial on foot sole. 
+
 
 \subsection{Underlying hypothesis}
 
-Human balance is composed of a complex interaction of different subsystems, which includes somatosensorial information, vestibular system, visual information, which is later processed in different networks of the Central Nervous System, and actuated by motor pathways at many different scales.
+Human balance is composed of a complex interaction of different subsystems, which includes somatosensorial information, vestibular system and visual information as input sources.  These are later processed in different networks of the Central Nervous System, and finally actuated by motor pathways at many different scales~\cite{Donato.etal2016}.
 
-Tables ~\ref{tab:patientsurvey} and \ref{tab:caregiverssurvey} show the results of the surveys performed on the Patient and their main Rehabilitaion caregivers.  Using the results from the surveys, we postulate three different systems that could benefit from the introduction of an external signal in the form of biofeedback that can aid in rehabilitation procedures.
+We perform a series of surveys and interviews with the patient and their caregivers.  Main results are summarized in 
+Tables ~\ref{tab:patientsurvey} and \ref{tab:caregiverssurvey}.  Based on the clinical history, the results from the surveys and interviews, we postulate three different potential clinical situations that could use the external signal in the form of biofeedback and could potentially aid in rehabilitation procedures.
 
 %Bradykinesia: due to the slow speech.
 %Unusual gait
 %Dysmetria (visual?) (ataxia?)
 
 \begin{itemize}
-\item Vestibular information on fusion of vestibular information
+\item Vestibular information or fusion of vestibular information
 \item Bradykinesia: the processing speed required to effectively perform the processing and actuation is not enough.
-\item Unusual gait
+\item Unusual gait: due to ataxic gait the movement is not normally regulated.
 \end{itemize}
 
-Based on the surveys and the information provided by caregivers there seems not to be any somatosensorial deficit\cite{cite}.
 
 \subsection{Robotic Device Vest}
 Description of the system.
@@ -138,15 +235,18 @@ All the IMU information represent a multichannel time series.  Hence, it can be 
 
 In this case, 5 healthy participants perform 20 controlled falls over gym mats.  
 
-(3) Ver en base a la encuesta como se da la situación de caída más común que Paula relata, en base a lo que ella manifiesta.  Entonces lo que hacemos es tomamos 5 sujetos y los hacemos caer 5 veces cada uno sobre la colchoneta (o 10 o 20 x sujeto, lo que más puedas).  Con estos datos, que son series de tiempo de 6 variables, intetamos ver si con un modelo de ML podemos predecir el momento de la caída simulada de cada uno de ellos y ANTICIPARNOS .  La idea entonces es que suene el motor cuando el sistema detecta con antelación que puede venir una caída inminente.  Aca se muestra el accuracy en la detección de la caída en los datos recabados.
-
-10 participants simulating falls.
+%(3) Ver en base a la encuesta como se da la situación de caída más común que Paula relata, en base a lo que ella manifiesta.  Entonces lo que hacemos es tomamos 5 sujetos y los hacemos caer 5 veces cada uno sobre la colchoneta (o 10 o 20 x sujeto, lo que más puedas).  Con estos datos, que son series de tiempo de 6 variables, intetamos ver si con un modelo de ML podemos predecir el momento de la caída simulada de cada uno de ellos y ANTICIPARNOS .  La idea entonces es que suene el motor cuando el sistema detecta con antelación que puede venir una caída inminente.  Aca se muestra el accuracy en la detección de la caída en los datos recabados.
 
 \subsubsection{Gait Pacemaker}
 
-This is a gait pacemaker coupled with a podometer.  It has been showed that gait synchronization with music achieved better effect \cite{Roerdink.etal2007}.
+This is a gait pacemaker coupled with a podometer.  It has been showed that gait synchronization with music achieved better effect \cite{Roerdink.etal2007} and there are effect on gait trainer on patient \cite{Blicher.etal2009}.   During this experiment 5 participants walked 5 meters distance.  IMU information was obtained to derive standard diagrams of gait patterns.  They were compared against those obtained for the patient under study.  And it was determiend the exact moment when the deviation against the patient was greater and the VF was triggered upon that.
 
-(4) En este caso, lo que hacemos es armar un gráfico de gait y lo que hace el dispositivo es detectar un punto en el ciclo y vibrar de forma recurrente, como un marca paso, basado en un podómetro.  En este caso, tomás 5 personas las hacés caminar, determinás cómo son esas curvas y accionás el motor siempre en el mismo momento.  Lo que mostramos son los gráficos y el momento donde se dispara la estimulación.
+%(4) En este caso, lo que hacemos es armar un gráfico de gait y lo que hace el dispositivo es detectar un punto en el ciclo y vibrar de forma recurrente, como un marca paso, basado en un podómetro.  En este caso, tomás 5 personas las hacés caminar, determinás cómo son esas curvas y accionás el motor siempre en el mismo momento.  Lo que mostramos son los gráficos y el momento donde se dispara la estimulación.
+
+
+\subsection{Participants}
+
+Participants are recruited voluntarily and the experiment is conducted anonymously in accordance with the declaration of Helsinki published by the World Health Organization. No monetary compensation is handed out and all participants agree and sign a written informed consent approved by the ITBA University Research Commission.
 
 %\subsection{Abbreviations and Acronyms}\label{AA}
 %Define abbreviations and acronyms the first time they are used in the text, 
