Almost the finished version.

--- a/iros.bib
+++ b/iros.bib
@@ -1,3 +1,47 @@
+@misc{Rahman.etal2022,
+  doi = {10.48550/ARXIV.2203.08215},
+  
+  url = {https://arxiv.org/abs/2203.08215},
+  
+  author = {Rahman, Wasifur and Hasan, Masum and Islam, Md Saiful and Olubajo, Titilayo and Thaker, Jeet and Abdelkader, Abdelrahman and Yang, Phillip and Ashizawa, Tetsuo and Hoque, Ehsan},
+  
+  keywords = {Computer Vision and Pattern Recognition (cs.CV), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Auto-Gait: Automatic Ataxia Risk Assessment with Computer Vision on Gait Task Videos},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+@article {Ali.etal2022,
+	author = {Ali, Farwa and Benarroch, Eduardo},
+	title = {What Is the Brainstem Control of Locomotion?},
+	volume = {98},
+	number = {11},
+	pages = {446--451},
+	year = {2022},
+	doi = {10.1212/WNL.0000000000200108},
+	publisher = {Wolters Kluwer Health, Inc. on behalf of the American Academy of Neurology},
+	issn = {0028-3878},
+	URL = {https://n.neurology.org/content/98/11/446},
+	eprint = {https://n.neurology.org/content/98/11/446.full.pdf},
+	journal = {Neurology}
+}
+
+
+@manual{Fetick.2022,
+title  = "MPU6050 Library",
+mendeley-groups = {Balance},
+author = "Romain JL Fetick",
+note   = "\url{https://github.com/rfetick/MPU6050\_light}",
+year   = "2022 (accessed September 16, 2022)"
+}
+
+
 @article{Zhao.etal2022,
 title = {Gait rehabilitation training robot: A motion-intention recognition approach with safety and convenience},
 journal = {Robotics and Autonomous Systems},
@@ -268,9 +312,43 @@ publisher = {IEEE},
 title = {{Brain-Computer Interface adaptation for an end user to compete in the Cybathlon}},
 year = {2016}
 }
+
+@article{Srivastava.etal2016,
+author = {Srivastava, Shraddha and Kao, Pei Chun},
+doi = {10.4172/2329-9096.1000370},
+file = {:Users/rramele/Library/Application Support/Mendeley Desktop/Downloaded/Srivastava et al. - 2016 - Robotic Assist-As-Needed as an Alternative to Therapist-Assisted Gait Rehabilitation.pdf:pdf},
+journal = {International Journal of Physical Medicine \& Rehabilitation},
+keywords = {Assist-as-needed,Body weight supported treadmill training,Force-field,Gait rehabilitation,Locomotion,Robotic exoskeleton,Stroke},
+mendeley-groups = {Balance},
+number = {5},
+pmid = {28580370},
+publisher = {NIH Public Access},
+title = {{Robotic Assist-As-Needed as an Alternative to Therapist-Assisted Gait Rehabilitation}},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5450822/},
+volume = {4},
+year = {2016}
+}
+
+
+@article{Olmos.etal2008,
+abstract = {Observational cross-section study.},
+author = {Olmos, L E and Freixes, O and Gatti, M A and Cozzo, D A and Fernandez, S A and Vila, C J and Agrati, P E and Rubel, I F},
+doi = {10.1038/sj.sc.3102132},
+issn = {1476-5624},
+journal = {Spinal Cord},
+mendeley-groups = {Balance},
+number = {5},
+pages = {331--334},
+title = {{Comparison of gait performance on different environmental settings for patients with chronic spinal cord injury}},
+url = {https://doi.org/10.1038/sj.sc.3102132},
+volume = {46},
+year = {2008}
+}
+
+
 @article{SierraM.2022,
 address = {Cham},
-author = {{Sierra M.}, Sergio D. and Jim{\'{e}}nez, Mario F. and Frizera-Neto, Anselmo and M{\'{u}}nera, Marcela and Cifuentes, Carlos A.},
+author = {Sierra M., Sergio D. and Jimenez, Mario F. and Frizera-Neto, Anselmo and Munera, Marcela and Cifuentes, Carlos A.},
 doi = {10.1007/978-3-030-79630-3_10},
 journal = {Interfacing Humans and Robots for Gait Assistance and Rehabilitation},
 mendeley-groups = {AlpiBot,Balance},
@@ -521,6 +599,44 @@ title = {{Impact of a vibrotactile belt on emotionally challenging everyday situ
 volume = {21},
 year = {2021}
 }
+
+@article{Domingo.etal2012,
+   abstract = {Currently, over a billion people including children (or about 15% of the worlds population) are estimated to be living with disability. The lack of support services can make handicapped people overly dependent on their families, which prevents them from being economically active and socially included. The Internet of Things can offer people with disabilities the assistance and support they need to achieve a good quality of life and allows them to participate in the social and economic life. In this paper, an overview of the Internet of Things for people with disabilities is provided. For this purpose, the proposed architecture of the Internet of Things is introduced. Different application scenarios are considered in order to illustrate the interaction of the components of the Internet of Things. Critical challenges have been identified and addressed. © 2011 Elsevier Ltd. All rights reserved.},
+   author = {Mari Carmen Domingo},
+   doi = {10.1016/j.jnca.2011.10.015},
+   isbn = {1084-8045},
+   issn = {10848045},
+   issue = {2},
+   journal = {Journal of Network and Computer Applications},
+   keywords = {Applications,Architecture,Internet of Things,People with disabilities,Research challenges},
+   month = {3},
+   pages = {584-596},
+   publisher = {Academic Press},
+   title = {An overview of the Internet of Things for people with disabilities},
+   volume = {35},
+   url = {https://www.sciencedirect.com/science/article/pii/S1084804511002025},
+   year = {2012},
+}
+
+
+@article{Simoens.etal2018,
+   abstract = {© 2018, © The Author(s) 2018. The Internet of Robotic Things is an emerging vision that brings together pervasive sensors and objects with robotic and autonomous systems. This survey examines how the merger of robotic and Internet of Things technologies will advance the abilities of both the current Internet of Things and the current robotic systems, thus enabling the creation of new, potentially disruptive services. We discuss some of the new technological challenges created by this merger and conclude that a truly holistic view is needed but currently lacking.},
+   author = {Pieter Simoens and Mauro Dragone and Alessandro Saffiotti},
+   doi = {10.1177/1729881418759424},
+   issn = {17298814},
+   issue = {1},
+   journal = {International Journal of Advanced Robotic Systems},
+   keywords = {Internet of Things,autonomous systems,cyber-physical systems,distributed robotics,network robot systems,robot ecology},
+   month = {1},
+   pages = {10},
+   publisher = {SAGE PublicationsSage UK: London, England},
+   title = {The Internet of Robotic Things: A review of concept, added value and applications},
+   volume = {15},
+   url = {http://journals.sagepub.com/doi/10.1177/1729881418759424},
+   year = {2018},
+}
+
+
 @article{Bowman2021,
 abstract = {Wearable devices are used in rehabilitation to provide biofeedback about biomechanical or physiological body parameters to improve outcomes in people with neurological diseases. This is a promising approach that influences motor learning and patients' engagement. Nevertheless, it is not yet clear what the most commonly used sensor configurations are, and it is also not clear which biofeedback components are used for which pathology. To explore these aspects and estimate the effectiveness of wearable device biofeedback rehabilitation on balance and gait, we conducted a systematic review by electronic search on MEDLINE, PubMed, Web of Science, PEDro, and the Cochrane CENTRAL from inception to January 2020. Nineteen randomized controlled trials were included (Parkinson's n = 6; stroke n = 13; mild cognitive impairment n = 1). Wearable devices mostly provided real-time biofeedback during exercise, using biomechanical sensors and a positive reinforcement feedback strategy through auditory or visual modes. Some notable points that could be improved were identified in the included studies; these were helpful in providing practical design rules to maximize the prospective of wearable device biofeedback rehabilitation. Due to the current quality of the literature, it was not possible to achieve firm conclusions about the effectiveness of wearable device biofeedback rehabilitation. However, wearable device biofeedback rehabilitation seems to provide positive effects on dynamic balance and gait for PwND, but higher-quality RCTs with larger sample sizes are needed for stronger conclusions.},
 author = {Bowman, Thomas and Gervasoni, Elisa and Arienti, Chiara and Lazzerini, Stefano Giuseppe and Negrini, Stefano and Crea, Simona and Cattaneo, Davide and Carrozza, Maria Chiara},
