Update fixing some errores of the manuscript.

--- a/iros.tex
+++ b/iros.tex
@@ -81,7 +81,7 @@ Brain stroke is a devastating medical condition, that affects world population a
 
 % As early as possible the rehabilitation can be put into place, better the outcome that can be obtained by the treatment. 
 
-Strong evidence suggests that neuroplasticity can be enhanced by neural rehabilitation~\cite{DeAngelis.etal2021,Albert.etal2012}.  These procedures are aimed to relearn movements that can trigger new neural pathway generation which reroute, or even completely replace, those pathways that were damaged by the stroke.  Neurorehabilitation procedures are performed by a group of interdisciplinary caregivers and technicians.  Recently, biofeedback techniques, aiming at providing extra information to the patient that can be used to aid in the relearning have appeared as an alternative treatment to increase neuralplasticity. These are in the form of Wearable devices-based biofeedback rehabilitation (WDBR)~\cite{Peake.etal2018} or more advanced robotic rehabilitation gait devices~\cite{Zhao.etal2022,Peshkin.etal2005,Tong.etal2006}.  
+Strong evidence suggests that neuroplasticity can be enhanced by neural rehabilitation~\cite{DeAngelis.etal2021,Albert.etal2012}.  These procedures are aimed to relearn movements that can trigger new neural pathway generation which reroute, or even completely replace, those pathways that were damaged by the stroke.  Neurorehabilitation procedures are performed by a group of interdisciplinary caregivers and technicians.  Recently, biofeedback techniques, aiming at providing extra information to the patient that can be used to aid in the relearning have appeared as an alternative treatment to increase neuralplasticity. These are in the form of Wearable devices-based biofeedback rehabilitation (WDBR)~\cite{Peake.etal2018} or robotic rehabilitation gait devices~\cite{Zhao.etal2022,Peshkin.etal2005,Tong.etal2006}.  
 
 %This published evidence emphasizes that this biofeedback can indeed enhance the results of rehabilitation procedures.
 
@@ -102,9 +102,9 @@ Section \ref{sec:case-study} presents the case study.  Next section \ref{sec:hyp
 
 Patient is a 31 years old female, without any history of chronic ailment, who suffered an acute brainstem stroke after giving birth.  The stroke was on posterior fossa subarachnoid due to a brain artereovenous malformation (AVM), which could be linked to pregnancy or puerperium~\cite{Porras.etal2017}.  Patient was in coma for around 2 months, and after that unable to walk, move, talk or swallow.  After two years of intensive rehabilitation, Patient managed to recover significantly, including from dysphagia, which was very important in order to remove the feeding tube allowing her to start speech recovering.  
 
-After 24 months since event, the patient, was discharged from hospital and only maintained a 3 times per week rehabilitation treatment, focusing on a remaining affection related with dynamic balance problems while walking.  The patient achieved satisfactory index scores in static balance tests and is able to perform static hip-balance and ankle-balance.  She has recovered muscle in her legs and can perform lower-limb exercises.  Her vision is normal.   
+After 24 months since event, the patient, was discharged from hospital and maintained a 3 times per week rehabilitation treatment, focusing on a remaining affection related to dynamic balance problems while walking.  The patient achieved satisfactory index scores in static balance tests and is able to perform static hip-balance and ankle-balance.  She has recovered muscle in her legs and can perform lower-limb exercises.  Her vision is normal.   
 
-However, when the patient tries to walk on open-spaces, or with confronting lights (like walking towards sunlight), with other people moving around, or while walking concentration fades, she is unable to keep up with the pace of the gait and the risk of fall increases.  Nowadays, the patient walks freely unaided at home but requires a Canadian cane otherwise.
+However, when the patient tries to walk on open-spaces, or with confronting lights (like walking towards sunlight), with other people moving around, or when concentration fades while walking, she is unable to keep up with the pace of the gait and the risk of fall increases.  Nowadays, the patient walks freely unaided at home but requires a Canadian cane otherwise.
 
 %\begin{table*}[t]
 %\begin{center}
@@ -254,7 +254,7 @@ Describe current treatment. & The patient is currently working on rehabilitation
 \end{table*}
 
 We perform a series of surveys and interviews with the patient and their caregivers.  Main results are summarized in 
-Tables ~\ref{tab:patientsurvey} and \ref{tab:caregiverssurvey}.  Based on the clinical history, the results from the surveys and interviews, we postulate three different potential clinical situations that could use the external signal in the form of biofeedback and could potentially aid in rehabilitation procedures.  The first (i) is a potential problem in the integration of vestibular information while walking, the second (ii) is bradykinesia where the required processing speed to effectively adjust the lower limb to keep the center of mass inside the base support is not achieved.  Finally, the (iii) hypothesis is an ataxic gait, where non-automated gait produces an increase in the likelihood of failing.
+Tables ~\ref{tab:patientsurvey} and \ref{tab:caregiverssurvey}.  Based on the clinical history, the results from the surveys and interviews, we postulate three different potential clinical situations that could use the external signal in the form of biofeedback and could potentially aid in rehabilitation procedures.  The first (i) is a potential problem in the integration of vestibular information while walking, the second (ii) is bradykinesia where the required processing speed to effectively adjust the lower limb to keep the center of mass inside the base support is not achieved.  Finally, the third (iii) hypothesis is an ataxic gait, where non-automated gait produces an increase in the likelihood of failing.
 
 %Bradykinesia: due to the slow speech.
 %Unusual gait
@@ -270,7 +270,7 @@ Tables ~\ref{tab:patientsurvey} and \ref{tab:caregiverssurvey}.  Based on the cl
 \subsection{Robotic Device Vest}
 \label{sec:vest}
 
-The vest system prototype is based on Internet of Robot Thing (IoRT) technology~\cite{Simoens.etal2018,Domingo.etal2012}. The controller is an Arduino UNO (Arduino LLC, Italy) board coupled with ESP8266 shield (WeMos, United Kingdom).  The system is powered by a commercial power bank with Li-Po 18650 cells (Ipower, United States), an inertial measurement unit Inertial Measurement Unit (IMU) MPU 6050 (OEM ITG/MPU6050) and a FA-12350 DC motor scavenged from old compact discs which provide the vibrotactile feedback.  The IMU uses the accelerometer and gyroscope data to get 3-dimensional angular acceleration and measure pitch roll and yaw angles. These angles are calculated from a set of transforming equations and processed with a complementary filter which relies 80\% in gyroscope data and 20\% in accelerometer data~\cite{Fetick.2022}. These values are transmitted by telemetry in real-time as UDP packets for off-board register, processing and further analysis. Data recovered by the device is sampled at 1000 Hz. 
+The vest system prototype is based on Internet of Robot Thing (IoRT) technology~\cite{Simoens.etal2018,Domingo.etal2012}. The controller is an Arduino UNO (Arduino LLC, Italy) board coupled with ESP8266 shield (WeMos, United Kingdom).  The system is powered by a commercial power bank with Li-Po 18650 cells (Ipower, United States). It also contains an Inertial Measurement Unit (IMU) MPU 6050 (OEM ITG/MPU6050) and a FA-12350 DC motor scavenged from old compact discs which provide the vibrotactile feedback.  The IMU uses the accelerometer and gyroscope data to get 3-dimensional angular acceleration and measure pitch roll and yaw angles. These angles are calculated from a set of transforming equations and processed with a complementary filter which relies 80\% in gyroscope data and 20\% in accelerometer data~\cite{Fetick.2022}. These values are transmitted by telemetry in real-time as UDP packets for off-board register, processing and further analysis. Data recovered by the device is sampled at 1000 Hz. 
 
 The smart-vest prototype can be seen in Figure~\ref{fig:smart-vest} ......
 
@@ -323,16 +323,16 @@ Preliminary results show that ........
 
 The information provided from all the experiments allow us to implement three different VF strategies:  The first is an \textbf{Artificial Vestibular Feedback}, which provides information as a feedback for vestibular information integration process.  This is implemented as a frequency-increasing VF signal that represents a distance from the breaking condition position where the fall is inevitable.   The purpose is to provide the patient with a continuous sensation that modulates the risk of falling.
 
-The second strategy is the implementation of \textbf{Gait Pacemaker}.  The obtained data from the analysis of the ataxic gait is used to implement a podometer.  It has been showed that gait synchronization with music increase gait performance~\cite{Roerdink.etal2007} and synchronized gait trainer achieved positive results on patient~\cite{Blicher.etal2009}.  Hence, the aim of this stimulation approach is to drive the keep the patient as close as possible to a normal and safe gait.
+The second strategy is the implementation of \textbf{Gait Pacemaker}.  The obtained data from the analysis of the ataxic gait is used to implement a podometer.  It has been showed that gait synchronization with music increase gait performance~\cite{Roerdink.etal2007} and synchronized gait trainer achieved positive results on patient~\cite{Blicher.etal2009}.  Hence, the aim of this stimulation approach is to keep the patient as close as possible to a normal and safe gait.
 
-The final stimulation approach deals with the Bradykinesia condition, and aims to have a \textbf{Risk-Predictor}~\cite{Rahman.etal2022,Ali.etal2022}.  The IMU data  represents a multichannel time series.  Hence, it can be used to predict a risk of falling, ahead of its occurrence, by implement a machine-learning predictor, based on the analysis of the time-series data.  The rationale is to counter the slowness of the response by predicting ahead of its occurrence, a high risk of falling, and providing the VF stimulation to force a change in the gait pattern.
+The final stimulation scheme deals with the Bradykinesia condition, and aims to have a \textbf{Risk-Predictor}~\cite{Rahman.etal2022,Ali.etal2022}.  The IMU data  represents a multichannel time series.  Hence, it can be used to predict a risk of falling, ahead of its occurrence, by implement a machine-learning predictor based on the analysis of the time-series data.  The rationale is to counter the slowness of the response by predicting the falling situation ahead of its occurrence and providing the VF stimulation to force a change in the risky gait pattern.
 
 %Hence, the signals  IMU can be feed back to the patient by vibrotactile stimulation on their belly. This will be impemented, first, in a binary way.  The hypothesis is that if there is a vestibular problem that forbids the patient to receive or evaluate the vestibular information appropriately, this external signal can be available for the patient to integrate it into the dynamic balance system.
 
 %Afterward, the experiment will be repeated with the 5 participants activating the vibrotactile stimulation which will map progressively the inclination angle.  Hence it will provide an extra signal that can give a accurate information in relation to the stability of the upper-trunk in relation to the walking gait.
 
 \section*{Conclusion}
-Overall, this device allow to implement a testbed that can be iteratively extended to obtain experimental data and to implement biofeedback strategies which could potentially lead to an increase in the effectiveness of different rehabilitation procedures~\cite{Bowman2021}.
+Overall, this devices allows to implement a testbed that can be iteratively extended to obtain experimental data and to implement biofeedback strategies which could potentially lead to an increase in the effectiveness of different rehabilitation procedures~\cite{Bowman2021}.
 
 
 %\section*{Acknowledgment}
